--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "thulme.com",
   "version": "0.1.0",
   "description": "Wordpress based website at thulme.com",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt-ftp-deploy": "0.0.9",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-less": "~0.6.0",
+    "less": "~1.4.0",
+    "grunt-contrib-watch": "~0.4.4"
   },
   "repository": {
     "type": "git",
