--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-less": "~0.6.0",
     "less": "~1.4.0",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-uglify": "~0.2.2"
   },
   "repository": {
     "type": "git",
